--- a/codegen.yml
+++ b/codegen.yml
@@ -1,14 +1,11 @@
 overwrite: true
-schema: "https://docs.github.com/public/schema.docs.graphql"
+schema: ./src/schema/schema.graphql
 documents: "src/**/*.graphql"
 generates:
-  src/generated/graphql.d.ts:
+  src/generated/graphql.ts:
     plugins:
-      - typescript
-      - typescript-operations
-      - typescript-urql
+      - "typescript"
+      - "typescript-operations"
+      - "typescript-urql"
     config:
       withHooks: true
-  ./graphql.schema.json:
-    plugins:
-      - "introspection"
